src/plugins/customTimestamps/style.css
.vc-cmt-info-card {
    background-color: var(--info-help-background);
    border: 1px solid var(--info-help-foreground);
    padding: 8px;
    border-radius: var(--radius-xs);
    margin: 10px 0;
}

.vc-cmt-demo-message-container{
    position: sticky;
    background: var(--background-base-lowest);
    padding: 10px 0;
    cursor: pointer;
    top: -8px;
    border: solid grey 1px;
    border-radius: 5px;
}

